Fix current time visibility on admin resources
Closes #618.

--- a/app/shared/availability-view/availability-view.less
+++ b/app/shared/availability-view/availability-view.less
@@ -203,6 +203,7 @@
       width: 2px;
       background-color: @black;
       opacity: 0.25;
+      z-index: 30;
     }
     .sticky {
       overflow: hidden;
